--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'index' %}">Home</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'about' %}">About</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'display' %}">Display</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'input' %}">Input</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'search' %}">Search</a></li>
+                        
                     </ul>
                 </div>
             </div>
