--- a/templates/profiles/index.html
+++ b/templates/profiles/index.html
@@ -7,7 +7,7 @@
         <div class="mx-auto text-center">
             <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
             <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one-page Bootstrap theme created by Start Bootstrap.</h2>
-            <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
+            <a class="btn btn-primary js-scroll-trigger" href="<li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'about' %}">Input</a></li>">Get Started</a>
         </div>
     </div>
 </header>
