--- a/templates/profiles/input.html
+++ b/templates/profiles/input.html
@@ -11,4 +11,11 @@
         </div>
     </div>
 </header>
+<div>
+    <form action="/application_url/" method="post">
+        <label for="customer_name">What is your name:</label>
+        <input id="cust_name" type="text" name="cust_name">
+        <input type="submit" value="Save">
+    </form>         
+</div>
 {% endblock %} 
