--- a/templates/profiles/input.html
+++ b/templates/profiles/input.html
@@ -13,8 +13,30 @@
 </header>
 <div>
     <form action="/application_url/" method="post">
-        <label for="customer_name">What is your name:</label>
-        <input id="cust_name" type="text" name="cust_name">
+        <label for="first_name">First Name:</label>
+        <input id="first_name" type="text" name="first_name">
+
+        <label for="last_name">Last Name:</label>
+        <input type="last_name" type="text" name="last_name">
+
+        <label for="user_name">Username:</label>
+        <input type="user_name" type="text" name="user_name">
+
+        <label for="password">Password:</label>
+        <input type="password" type="password" name="password">
+
+        <label for="email">Email:</label>
+        <input type="email" type="text" name="email">
+
+        <label for="phone">Phone:</label>
+        <input type="phone" type="text" name="phone">
+
+        <label for="profile_photo">Image:(Not Working)</label>
+        <input type="profile_photo" type="text" name="profile_photo">
+
+        <label for="skill">Image:(Not Working)</label>
+        <input type="skill" type="text" name="skill">
+
         <input type="submit" value="Save">
     </form>         
 </div>
