--- a/templates/profiles/search.html
+++ b/templates/profiles/search.html
@@ -11,4 +11,16 @@
         </div>
     </div>
 </header>
+<div>
+    <form action="{% url 'searchprofile' %}" name="form" method="get">
+        <label for='first_name'>Enter the first name:</label>
+        <input type="text" name='first_name' id='first_name'>
+        <br><br>
+
+        <label for='last_name'>Enter the last name:</label>
+        <input type="text" name='last_name' id='last_name'>
+        <br><br>
+        <button type="submit">Search</button>
+    </form> 
+</div>
 {% endblock %} 
