--- a/templates/profiles/input.html
+++ b/templates/profiles/input.html
@@ -34,7 +34,7 @@
         <input type="phone" type="text" name="phone">
         <br><br>
         <label for="profile_photo">Image:(Not Working)</label>
-        <input type="profile_photo" type="text" name="profile_photo">
+        <input type="profile_photo" type="img" name="profile_photo">
         <br><br>
         <label for="id">Skills: </label>
         <select name="id">
