--- a/templates/profiles/display.html
+++ b/templates/profiles/display.html
@@ -1,30 +1,73 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<!--Links-->
+<link href="{% static 'css/display.css' %}" rel="stylesheet">
+
 <!-- Masthead-->
 <div style="padding-top: 75px; padding-left: 50px; padding-right: 50px; text-align: center;">
 
 <div class="container">
     {% for profile in our_profiles %}
-    <p>
-        {{ profile.first_name }}
-        {{ profile.last_name }}
-        {{ profile.email }}
-        {{ profile.phone }}
-        {{ profile.username }}
-        {{ profile.password }}
-        {{ profile.profile_photo }}
-        {% for skill in profile.skills.all %}
-            <br>
-            {{ skill.title }}
-            <br>
-            {{ skill.description }}         
-        {% endfor %}
-        </p>  
+    <!-- New Stuff -->
+    <section class="vh-100" style="background-color: #9de2ff;">
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-md-9 col-lg-7 col-xl-5">
+              <div class="card" style="border-radius: 15px; width: 700px">
+                <div class="card-body p-4">
+                  <div class="d-flex text-black">
+                    <div class="flex-shrink-0">
+                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp"
+                        alt="Generic placeholder image" class="img-fluid"
+                        style="width: 180px; border-radius: 10px;">
+                    </div>
+                    <div class="flex-grow-1 ms-3">
+                      <h5 class="mb-1">{{ profile.first_name }} {{ profile.last_name }}</h5>
+                      <p class="mb-2 pb-1" style="color: #2b2a2a;">Senior Journalist</p>
+                      <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
+                        style="background-color: #efefef;">
+                        <div>
+                          <p class="small text-muted mb-1">Email</p>
+                          <p class="mb-0">{{ profile.email }}</p>
+                        </div>
+                        <div class="px-3">
+                          <p class="small text-muted mb-1">Phone Number</p>
+                          <p class="mb-0">{{ profile.phone }}</p>
+                        </div>
+                        <div>
+                          <p class="small text-muted mb-1">Rating</p>
+                          <p class="mb-0">8.5</p>
+                        </div>
+                      </div>
+                      <div class="d-flex pt-1">
+                        <div class="dropdown flex-grow-1">
+                            <button onclick="myFunction()" class="dropbtn me-1 flex-grow-1 rounded-3" style="width: 100%;">View Skills</button>
+                            <div id="myDropdown" class="dropdown-content rounded-3" style="width: 100%;">
+                                {% for skill in profile.skills.all %}
+                                <p>{{ skill.title }}: {{ skill.description }}</p>         
+                                {% endfor %}
+                              {% comment %} <a href="#">Link 1</a>
+                              <a href="#">Link 2</a>
+                              <a href="#">Link 3</a> {% endcomment %}
+                            </div>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
     {% endfor %} 
 </div>
 
 </div>
 
 
+<script src="{% static 'js/display.js'%}"></script>
 {% endblock %} 
