index and about

--- a/templates/profiles/index.html
+++ b/templates/profiles/index.html
@@ -17,7 +17,7 @@
 
     {% else %}
     <div class="hero-container" data-aos="fade-up">
-      <h1>Welcome to Student Network</h1>
+      <h1>Welcome to Student Tutor</h1>
       <h2>Stay in touch with your peers</h2>
       <a href="#about" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>
     </div>
@@ -37,7 +37,7 @@
 
     <div class="section-title" data-aos="fade-in" data-aos-delay="100">
       <h2>Services</h2>
-      <p>Here are some of the services you will be able to use with Student Network:</p>
+      <p>Here are some of the services you will be able to use with Student Tutor:</p>
     </div>
 
     <div class="row" style="
@@ -90,9 +90,9 @@
     <div class="row no-gutters">
       <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-up">
         <div class="content">
-          <h3>Signup for Student Network!</h3>
+          <h3>Signup for Student Tutor!</h3>
           <p>
-            At Kidney Help, we do our best to help patients with kidney disease manage their diet and lifestyle decisions.
+            At Student Tutor we do our best to help students communicate and help each other.
           </p>
           <a href="{% url 'login' %}" class="about-btn">Login<i class="bx bx-chevron-right"></i></a>
         </div>
@@ -102,13 +102,13 @@
           <div class="row">
             <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-receipt"></i>
-              <h4>Track your food and water intake</h4>
-              <p>Log what you eat, and how much exercise you do to see if you are living a healthy lifestyle</p>
+              <h4>Showcase your skills</h4>
+              <p>Tell us what you specialize in so we can help you help other students!</p>
             </div>
             <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-cube-alt"></i>
-              <h4>Submit Lab Reports</h4>
-              <p>Keep track of you vitals, and keep a record of your history at the doctors office</p>
+              <h4>Help Out</h4>
+              <p>With Student Tutor, you are able to help other students and get the help you need!</p>
             </div>
           </div>
         </div><!-- End .content-->
@@ -124,7 +124,7 @@
 
     <div class="section-title" data-aos="fade-in" data-aos-delay="100">
       <h2>Services</h2>
-      <p>Here are some of the services you will be able to use with Kidney Help:</p>
+      <p>Here are some of the services you will be able to use with Student Tutor:</p>
     </div>
 
     <div class="row" style="
@@ -139,32 +139,16 @@
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
         <div class="icon-box" data-aos="fade-up">
           <div class="icon"><i class="bx bxl-dribbble"></i></div>
-          <h4 class="title" style=""><a style="cursor: context;">Exercise</a></h4>
-          <p class="description">Keep track of your workouts and daily exercise</p>
+          <h4 class="title" style=""><a style="cursor: context;">Connect</a></h4>
+          <p class="description">Stay connected with your classmates outside of the classroom</p>
         </div>
       </div>
 
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
         <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
           <div class="icon"><i class="bx bx-file"></i></div>
-          <h4 class="title"><a style="cursor: context;">Vitals</a></h4>
-          <p class="description">Track your vitals reports from you visits to the doctors office</p>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-        <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-          <div class="icon"><i class="bx bx-tachometer"></i></div>
-          <h4 class="title"><a style="cursor: context;">Progress</a></h4>
-          <p class="description">See how hard you are working with our progress reports</p>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-        <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-          <div class="icon"><i class="bx bx-world"></i></div>
-          <h4 class="title"><a style="cursor: context;">Live Healthy</a></h4>
-          <p class="description">Track your meals and receive suggesitons on what could improve your diet</p>
+          <h4 class="title"><a style="cursor: context;">Help</a></h4>
+          <p class="description">Ask and answer questions from other students</p>
         </div>
       </div>
 
@@ -184,8 +168,8 @@
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <h3>Improve Your Health</h3>
-          <p>Stay in control of your diet and exercise and see how much you are improving. Sign up today to live healthier<p>
+          <h3>Connect and Improve</h3>
+          <p>With Student Tutor, not only will you get better at certain subjects, you will also connect with hundreds of other students at your school!<p>
           <a class="cta-btn" href="{% url 'login' %}">Sign Up!</a>
         </div>
 
