--- a/templates/profiles/index.html
+++ b/templates/profiles/index.html
@@ -53,7 +53,7 @@
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
         <div class="icon-box" data-aos="fade-up">
           <div class="icon"><i class="bx bxl-dribbble"></i></div>
-          <h4 class="title" style=""><a href="{% url 'index' %}"> <span style="position: absolute;
+          <h4 class="title" style=""><a href="{% url 'search' %}"> <span style="position: absolute;
             width: 100%;
             height: 100%;
             top: 0;
@@ -66,7 +66,7 @@
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
         <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
           <div class="icon"><i class="bx bx-file"></i></div>
-          <h4 class="title"><a href="{% url 'index' %}"><span style="position: absolute;
+          <h4 class="title"><a href="{% url 'searchskills' %}"><span style="position: absolute;
             width: 100%;
             height: 100%;
             top: 0;
