--- a/templates/profiles/login.html
+++ b/templates/profiles/login.html
@@ -14,10 +14,10 @@
         <div class="col-lg-6 mb-5 mb-lg-0">
           <h1 class="my-5 display-3 fw-bold ls-tight">
             The best way <br />
-            <span class="" style="color: #67b0d1;">to track your diet</span>
+            <span class="" style="color: #67b0d1;">to connect with your peers</span>
           </h1>
           <p style="color: hsl(217, 10%, 50.8%)">
-            Create an account to start your journey of better health and healing.
+            Create an account to start collaborating with your fellow students.
           </p>
         </div>
 
