--- a/templates/base.html
+++ b/templates/base.html
@@ -68,8 +68,8 @@
           <li><a class="nav-link scrollto" href="{% url 'profile' %}">Profile</a></li>
           <li class="dropdown"><a href="#"><span>Search</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="{% url 'search' %}">Find People</a></li>
-              <li><a href="{% url 'searchskills' %}">Find Help</a></li>
+              <li><a href="{% url 'search' %}">By People</a></li>
+              <li><a href="{% url 'searchskills' %}">By Skill</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="{% url 'display' %}">Display</a></li>
