--- a/templates/profiles/display.html
+++ b/templates/profiles/display.html
@@ -9,7 +9,7 @@
 
 <div class="container">
     <!-- New Stuff -->
-    <section class="vh-100" style="background-color: #9de2ff;">
+    <section class="vh-100" style="background-color: #9de2ff; overflow-y:auto;">
         {% for profile in our_profiles %}
             <div class="col col-md-9 col-lg-7 col-xl-5" style="padding-left: 200px; padding-bottom: 25px;">
               <div class="card" style="border-radius: 15px; width: 700px;">
