--- a/templates/profiles/skills.html
+++ b/templates/profiles/skills.html
@@ -11,7 +11,7 @@
               class="w-100" style="border-top-left-radius: .3rem; border-top-right-radius: .3rem;"
               alt="picture of food" height="250"> {% endcomment %}
             <div class="card-body p-4 p-md-5">
-              <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 px-md-2">Search People and See Their Skills</h3>
+              <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 px-md-2">Add Current Skills to Your Profile</h3>
                 <form action="{% url 'skillsubmit' %}" name="form" method="get">
                     <div class="form-outline mb-4">
                         <select name="skills" id="skills" class="form-control">
@@ -19,7 +19,7 @@
                             <option value={{ skill.title }}>{{ skill.title }}: {{ skill.description }}: </option>
                             {% endfor %}
                         </select>
-                        <label for="skills" class="form-label">Skills</label>
+                        <label for="skills" class="form-label">Common Skills</label>
                     </div>
                     <button type="submit" class="btn btn-lg mb-1" style="background: #67b0d1; color:white;">Add</button>
                 </form> 
