--- a/templates/profiles/index.html
+++ b/templates/profiles/index.html
@@ -42,7 +42,6 @@
 
     <div class="row" style="
       text-align: center;
-      cursor: pointer;
       font-family: Helvetica, Arial, sans-serif;
       font-weight: bold;
       width: 100%;
@@ -58,7 +57,8 @@
             height: 100%;
             top: 0;
             left: 0;
-            z-index: 1;"></span>Connect</a></h4>
+            z-index: 1;
+            cursor: pointer;"></span>Connect</a></h4>
           <p class="description">Stay connected with your classmates outside of the classroom</p>
         </div>
       </div>
