--- a/templates/profiles/display.html
+++ b/templates/profiles/display.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="flex-grow-1 ms-3">
                       <h5 class="mb-1">{{ profile.first_name }} {{ profile.last_name }}</h5>
-                      <p class="mb-2 pb-1" style="color: #2b2a2a;">Senior Journalist</p>
+                    <!--  <p class="mb-2 pb-1" style="color: #2b2a2a;">Senior Journalist</p> -->
                       <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
                         style="background-color: #efefef;">
                         <div>
@@ -41,9 +41,10 @@
                           <p class="small text-muted mb-1">Phone Number</p>
                           <p class="mb-0">{{ profile.phone }}</p>
                         </div>
+          
                         <div>
-                          <p class="small text-muted mb-1">Rating</p>
-                          <p class="mb-0">8.5</p>
+                          <p class="small text-muted mb-1">School</p>
+                          <p class="mb-0">BYU</p>
                         </div>
                       </div>
                       <div class="d-flex pt-1">
