--- a/templates/profiles/profile.html
+++ b/templates/profiles/profile.html
@@ -39,20 +39,17 @@
                 <input type="email" name="email" id="email" class="form-control" value={{ profile.email }}>
                 <label for="email" class="form-label">Email</label>
               </div>
-              <div>
-                <img src="{{ other.profile_photo.url }}"
-                        alt="Generic placeholder image" class="img-fluid"
-                        style="width: 180px; border-radius: 10px;">
-              <div>
-              <div class="form-outline mb-4">
-                <select name="race" id="race" class="form-control">
-                  {% for photo in photos %}
-                  <option value={{ photo.url }}>{{ photo.url }}</option>
-                  {% endfor %}
-                </select>
-                <input type="file" name="photo" id="photo" class="form-control" value={{ other.profile_photo.url }}>
-                <label for="photo" class="form-label">Choose a profile picture:</label>
-              </div> 
+              <div class="row">
+                <div class="form-outline col-md-6 mb-4">
+                  <img src="{{ other.profile_photo.url }}"
+                          alt="Generic placeholder image" class="img-fluid"
+                          style="width: 180px; border-radius: 10px;">
+                </div>
+                <div class="form-outline col-md-6 mb-4">
+                  <input type="file" name="photo" id="photo" class="form-control" value={{ other.profile_photo.url }}>
+                  <label for="photo" class="form-label">Choose a profile picture:</label>
+                </div> 
+              </div>
 
               <button type="submit" class="btn btn-lg mb-1" style="background: #67b0d1; color:white;">Submit Changes</button>
 
@@ -99,9 +96,9 @@
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-lg-8 col-xl-6">
         <div class="card rounded-3">
-          <img src="{% static '/img/food2.jpg' %}"
+          <!--<img src="{% static '/img/food2.jpg' %}"
             class="w-100" style="border-top-left-radius: .3rem; border-top-right-radius: .3rem;"
-            alt="Diet Photo" height="250">
+            alt="Diet Photo" height="250">-->
           <div class="card-body p-4 p-md-5">
             <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 px-md-2">Create Account</h3>
 
@@ -147,12 +144,10 @@
                     <label for="pass2" class="form-label">Confirm Password</label>
                   </div>
                 </div>   
-              <!--
               <div class="form-outline mb-4">
                 <label for="photo" class="form-label">Choose a profile picture:</label>
                 <input type="file" id="photo" name="photo" accept="image/png, image/jpeg" class="form-control">
               </div>
-            -->
               <button type="submit" class="btn btn-lg mb-1" style="background: #67b0d1; color:white;">Create Profile</button>
 
             </form>
